Services/Issue-Tracking-Frotend/deployment.yaml
# ===========================
# Namespace
# ===========================
apiVersion: v1
kind: Namespace
metadata:
  name: issue-app-frotend

---
# ===========================
# Frontend Deployment
# ===========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-app-frotend-app
  namespace: issue-app-frotend
  labels:
    smart-restart.io/enabled: "true"
  annotations:
    smart-restart.io/max-retries: "3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issue-app-frotend
  template:
    metadata:
      labels:
        app: issue-app-frotend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: issue-app-frotend
          image: ghcr.io/ordocha0/issue-tracking-frontend:3caafd97c47cee147667b2eaefe5e97725e49f9c
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

---
# ===========================
# Frontend Service
# ===========================
apiVersion: v1
kind: Service
metadata:
  name: issue-app-frotend-service
  namespace: issue-app-frotend
spec:
  selector:
    app: issue-app-frotend
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30070
