Services/Issue-Tracking-Frotend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issue-app-frotend-ingress
  namespace: issue-app-frotend
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-global-ratelimit@kubernetescrd
spec:
  rules:
    - host: looomlights.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: issue-app-frotend-service
                port:
                  number: 80 
  tls:
    - hosts:
        - looomlights.com
      secretName: issue-app-frotend-tls
